--- a/index.html
+++ b/index.html
@@ -635,6 +635,62 @@ button {
   .product-details {
     padding-bottom: 140px;
 }
+  /* ===== КОРЗИНА ===== */
+
+.cart-item {
+    background: #1c1c1e;
+    padding: 16px;
+    border-radius: 16px;
+    margin-bottom: 16px;
+    display: flex;
+    justify-content: space-between;
+    align-items: center;
+}
+
+.cart-item-info strong {
+    font-size: 16px;
+    display: block;
+    margin-bottom: 6px;
+}
+
+.cart-item-price {
+    color: #ff4d6d;
+    font-weight: 600;
+}
+
+.cart-controls {
+    display: flex;
+    align-items: center;
+    gap: 8px;
+}
+
+.cart-controls span {
+    min-width: 24px;
+    text-align: center;
+    font-weight: 600;
+}
+
+.cart-controls button {
+    background: #ff4d6d;
+    border: none;
+    color: white;
+    width: 34px;
+    height: 34px;
+    border-radius: 10px;
+    cursor: pointer;
+    font-size: 16px;
+    transition: all 0.15s ease;
+}
+
+.cart-controls button:active {
+    transform: scale(0.9);
+    opacity: 0.8;
+}
+
+.remove-btn {
+    background: #2a2a2d !important;
+    color: #ff4d6d !important;
+}
 
 </style>
 </head>
