--- a/index.html
+++ b/index.html
@@ -691,6 +691,32 @@ button {
     background: #2a2a2d !important;
     color: #ff4d6d !important;
 }
+ .cart-controls {
+    display: flex;
+    align-items: center;
+    gap: 8px;
+}
+
+.cart-controls button {
+    width: 36px;
+    height: 36px;
+    border: none;
+    border-radius: 10px;
+    background: #ff4d6d;
+    color: white;
+    font-size: 18px;
+    font-weight: 600;
+    cursor: pointer;
+    transition: all 0.15s ease;
+}
+
+.cart-controls button:active {
+    transform: scale(0.9);
+}
+
+.remove-btn {
+    background: #2a2a2a;
+} 
 
 </style>
 </head>
@@ -1027,8 +1053,9 @@ function changeQty(name, price, delta) {
     if (existing) {
         existing.qty += delta;
 
-        if (existing.qty <= 0) {
-            cart = cart.filter(i => i.name !== name);
+        if (existing.qty < 1) {
+    existing.qty = 1;
+}
         }
 
     } else if (delta > 0) {
@@ -1073,6 +1100,8 @@ if (qtyEl) {
         }
     }
 }
+  else {
+    renderCart();
 }
   function removeFromCart(name) {
     cart = cart.filter(item => item.name !== name);
