--- a/index.html
+++ b/index.html
@@ -535,42 +535,57 @@ button {
     font-size: 14px;
     font-weight: 500;
 }
-  /* === MORPH КНОПКА === */
+ /* ===== NEW ACTION AREA ===== */
 
 .action-area {
-  position: relative;
-  margin-top: 12px;
-  height: 45px;
+    margin-top: 16px;
 }
 
-.action-area .add-btn,
-.action-area .qty-control {
-  position: absolute;
-  width: 100%;
-  transition: all 0.25s ease;
+.add-btn {
+    width: 100%;
+    margin-top: 12px;
 }
 
-.action-area .add-btn {
-  opacity: 1;
-  transform: scale(1);
+.qty-control {
+    display: flex;
+    align-items: center;
+    justify-content: space-between;
+    background: rgba(255,255,255,0.05);
+    border: 1px solid rgba(255,255,255,0.08);
+    border-radius: 14px;
+    padding: 6px;
+    margin-top: 14px;
+    backdrop-filter: blur(8px);
+}
+  /* ===== QTY BUTTON STYLE ===== */
+
+.qty-btn {
+    width: 36px;
+    height: 36px;
+    border: none;
+    border-radius: 10px;
+    background: linear-gradient(135deg, #ff4d6d, #ff1e4d);
+    color: white;
+    font-size: 18px;
+    font-weight: 700;
+    cursor: pointer;
+    transition: all 0.2s ease;
 }
 
-.action-area .qty-control {
-  opacity: 0;
-  transform: scale(0.9);
-  pointer-events: none;
+.qty-btn:hover {
+    transform: translateY(-2px);
+    box-shadow: 0 6px 14px rgba(255, 77, 109, 0.4);
 }
 
-.action-area.active .add-btn {
-  opacity: 0;
-  transform: scale(0.9);
-  pointer-events: none;
+.qty-btn:active {
+    transform: scale(0.9);
 }
 
-.action-area.active .qty-control {
-  opacity: 1;
-  transform: scale(1);
-  pointer-events: auto;
+.qty-number {
+    flex: 1;
+    text-align: center;
+    font-weight: 600;
+    font-size: 14px;
 }
  /* ===== КРАСНАЯ КНОПКА НАЗАД ===== */
 
