--- a/index.html
+++ b/index.html
@@ -32,13 +32,6 @@ h2 { margin-top:0; }
 
 .card:active { transform: scale(0.97); }
 
-.product-card {
-  background:#2a2a2a;
-  padding:15px;
-  border-radius:20px;
-  display:flex;
-  flex-direction:column;
-  justify-content:space-between;
 }
   /* ===== КАТЕГОРИИ ===== */
 
@@ -877,6 +870,10 @@ button {
     border-radius: 18px;
     overflow: hidden;
     transition: all 0.25s ease;
+    position: relative;
+
+    display: flex;
+    flex-direction: column;
 }
 
 .product-card:hover {
