--- a/index.html
+++ b/index.html
@@ -59,6 +59,7 @@ h2 { margin-top:0; }
   background-blend-mode: darken;
 background-color: rgba(0,0,0,0.4);
   box-shadow: 0 8px 20px rgba(0,0,0,0.5);
+  margin-bottom: 20px;
 }
 
 .category-card:active{
@@ -871,9 +872,10 @@ button {
     overflow: hidden;
     transition: all 0.25s ease;
     position: relative;
-
     display: flex;
     flex-direction: column;
+
+    margin-bottom: 20px; /* ← ВОТ ЭТО ДОБАВЛЯЕМ */
 }
 
 .product-card:hover {
