--- a/index.html
+++ b/index.html
@@ -554,13 +554,13 @@ button {
   /* ===== QTY BUTTON STYLE ===== */
 
 .qty-btn {
-    width: 36px;
-    height: 36px;
+    width: 32px;
+    height: 32px;
     border: none;
     border-radius: 10px;
     background: linear-gradient(135deg, #ff4d6d, #ff1e4d);
     color: white;
-    font-size: 18px;
+    font-size: 16px;
     font-weight: 700;
     cursor: pointer;
     transition: all 0.2s ease;
@@ -861,7 +861,7 @@ button {
     letter-spacing: 0.3px;
 }
   .category-content {
-    padding: 14px 16px 18px 16px;
+    padding: 12px 14px 14px 14px;
 }
   /* ===== PRODUCT CARD UPGRADE ===== */
 
@@ -875,7 +875,7 @@ button {
     display: flex;
     flex-direction: column;
 
-    margin-bottom: 20px; /* ← ВОТ ЭТО ДОБАВЛЯЕМ */
+    margin-bottom: 16px;   /* было 20 */
 }
 
 .product-card:hover {
@@ -950,8 +950,8 @@ button {
 
 .add-btn {
     width: 100%;
-    height: 48px;
-    border-radius: 14px;
+    height: 42px;
+    border-radius: 12px;
     border: none;
     background: linear-gradient(135deg, #ff4d6d, #ff1e4d);
     color: white;
@@ -971,11 +971,10 @@ button {
     justify-content: space-between;
     background: rgba(255,255,255,0.05);
     border: 1px solid rgba(255,255,255,0.08);
-    border-radius: 14px;
-    padding: 6px 10px;
+    border-radius: 12px;
+    padding: 4px 8px;
     backdrop-filter: blur(8px);
-    margin-top: 12px;
-  box-shadow: 0 6px 16px rgba(0,0,0,0.3);
+    margin-top: 8px;
 }
 
 </style>
