--- a/index.html
+++ b/index.html
@@ -945,7 +945,9 @@ button {
   /* ===== АНИМАЦИЯ ПЕРЕКЛЮЧЕНИЯ ADD → QTY ===== */
 
 .action-area {
-    margin-top: 16px;
+    position: relative;
+    height: 44px;      /* фиксированная высота */
+    margin-top: 10px;  /* меньше воздуха */
 }
 
 .add-btn {
