--- a/index.html
+++ b/index.html
@@ -897,7 +897,9 @@ button {
 
 .product-card img {
     width: 100%;
-    display: block;
+    height: 150px;        /* фиксируем высоту */
+    object-fit: cover;    /* чтобы красиво обрезалось */
+    border-radius: 14px;
 }
   /* ===== PREMIUM CART SUMMARY ===== */
 
