--- a/index.html
+++ b/index.html
@@ -533,7 +533,8 @@ button {
 
 .action-area {
     position: relative;
-    margin-top: 10px;
+    margin-top: 8px;
+    padding: 10px 14px 14px 14px;
 }
 
 .add-btn {
@@ -854,13 +855,13 @@ button {
 
 .category-price {
     display: inline-block;
-    margin-top: 8px;
-    padding: 8px 14px;
+    margin-top: 6px;
+    padding: 6px 12px;
     background: linear-gradient(135deg, #ff4d6d, #ff1e4d);
-    border-radius: 12px;
+    border-radius: 10px;
     font-weight: 700;
-    font-size: 16px;
-    box-shadow: 0 6px 16px rgba(255, 77, 109, 0.35);
+    font-size: 14px;
+    box-shadow: 0 4px 12px rgba(255, 77, 109, 0.3);
 }
   /* ===== CATEGORY TITLE ===== */
 
@@ -872,7 +873,7 @@ button {
     letter-spacing: 0.3px;
 }
   .category-content {
-    padding: 12px 14px 14px 14px;
+    padding: 12px 14px 8px 14px;
 }
   /* ===== PRODUCT CARD UPGRADE ===== */
 
@@ -886,7 +887,6 @@ button {
 
     display: flex;
     flex-direction: column;
-    justify-content: flex-start;   /* НЕ space-between */
 }
   
 .product-card:hover {
@@ -896,9 +896,8 @@ button {
 }
 
 .product-card img {
-    width: 100%;
-    height: 150px;        /* фиксируем высоту */
-    object-fit: cover;    /* чтобы красиво обрезалось */
+    height: 140px;
+    object-fit: cover;
     border-radius: 14px;
 }
   /* ===== PREMIUM CART SUMMARY ===== */
@@ -955,14 +954,7 @@ button {
   #main {
     padding-bottom: 110px;
 }
-  /* ===== АНИМАЦИЯ ПЕРЕКЛЮЧЕНИЯ ADD → QTY ===== */
-
-.action-area {
-    position: relative;
-    height: 44px;      /* фиксированная высота */
-    margin-top: 10px;  /* меньше воздуха */
-}
-
+ 
 .add-btn {
     width: 100%;
     height: 42px;
@@ -984,12 +976,9 @@ button {
     display: flex;
     align-items: center;
     justify-content: space-between;
-    background: rgba(255,255,255,0.05);
-    border: 1px solid rgba(255,255,255,0.08);
+    background: #2a2a2a;
     border-radius: 12px;
-    padding: 4px 8px;
-    backdrop-filter: blur(8px);
-    margin-top: 8px;
+    padding: 6px 10px;
 }
   .action-area .qty-control {
     display: none;
