--- a/index.html
+++ b/index.html
@@ -37,8 +37,8 @@ h2 { margin-top:0; }
 
 .grid {
     display: grid;
-    grid-template-columns: 1fr;   /* одна колонка */
-    gap: 16px;                    /* аккуратный отступ */
+    grid-template-columns: 1fr;
+    gap: 22px;   /* было 16px → увеличиваем */
     padding: 16px;
 }
 
