--- a/index.html
+++ b/index.html
@@ -903,48 +903,75 @@ button {
   /* ===== PREMIUM CART SUMMARY ===== */
 
 .cart-summary {
+  <div class="sheet-handle"></div>
     position: fixed;
     bottom: 0;
     left: 0;
     width: 100%;
-    padding: 16px 20px;
-    background: rgba(20,20,20,0.9);
-    backdrop-filter: blur(14px);
-    border-top: 1px solid rgba(255,255,255,0.08);
-    box-shadow: 0 -10px 30px rgba(0,0,0,0.5);
+
+    padding: 20px;
+    padding-bottom: 28px;
+
+    background: rgba(22,22,22,0.92);
+    backdrop-filter: blur(20px);
+
+    border-radius: 24px 24px 0 0;
+    border-top: 1px solid rgba(255,255,255,0.06);
+
+    box-shadow: 0 -20px 40px rgba(0,0,0,0.6);
+
     display: flex;
-    justify-content: space-between;
-    align-items: center;
-    z-index: 100;
+    flex-direction: column;
+    gap: 14px;
+
+    z-index: 1000;
 }
 
 .summary-info {
     display: flex;
-    flex-direction: column;
+    justify-content: space-between;
+    align-items: center;
 }
 
 .summary-label {
-    font-size: 12px;
+    font-size: 13px;
     opacity: 0.6;
 }
 
 .summary-price {
-    font-size: 20px;
+    font-size: 22px;
     font-weight: 700;
-    background: linear-gradient(135deg, #ff4d6d, #ff1e4d);
-    -webkit-background-clip: text;
-    -webkit-text-fill-color: transparent;
+    color: #ff4d6d;
 }
 
 .summary-btn {
-    padding: 10px 18px;
+    width: 100%;
+    height: 50px;
+
     border: none;
-    border-radius: 12px;
+    border-radius: 16px;
+
     background: linear-gradient(135deg, #ff4d6d, #ff1e4d);
     color: white;
+
+    font-size: 16px;
     font-weight: 600;
+
     cursor: pointer;
     transition: all 0.2s ease;
+}
+
+.summary-btn:active {
+    transform: scale(0.96);
+}
+
+.summary-btn:hover {
+    transform: translateY(-2px);
+    box-shadow: 0 8px 20px rgba(255,77,109,0.4);
+}
+
+.summary-btn:active {
+    transform: scale(0.95);
 }
 
 .summary-btn:hover {
@@ -952,7 +979,7 @@ button {
     box-shadow: 0 6px 16px rgba(255,77,109,0.4);
 }
   #main {
-    padding-bottom: 110px;
+    padding-bottom: 140px;
 }
  
 .add-btn {
@@ -996,6 +1023,13 @@ button {
     grid-template-columns: 1fr;
     row-gap: 26px;
     padding: 16px;
+}
+  .sheet-handle {
+    width: 40px;
+    height: 5px;
+    border-radius: 10px;
+    background: rgba(255,255,255,0.3);
+    margin: 0 auto 10px auto;
 }
 
 </style>
