--- a/index.html
+++ b/index.html
@@ -1037,6 +1037,7 @@ button {
 <script>
 
 let cart = JSON.parse(localStorage.getItem("cart")) || [];
+  updateCartBar();
 let currentCategory = null;
   const operatorUsername = "budapuff_meneger"; // <-- сюда свой username
   
