--- a/index.html
+++ b/index.html
@@ -1361,7 +1361,7 @@ function changeQty(name, price, delta) {
 } else if (delta > 0) {
     cart.push({ name, price, qty: 1 });
 }
-
+console.log("cart сейчас:", cart);
     updateCartBar();
 localStorage.setItem("cart", JSON.stringify(cart));
 
