--- a/index.html
+++ b/index.html
@@ -1014,6 +1014,31 @@ button {
     background: rgba(255,255,255,0.3);
     margin: 0 auto 10px auto;
 }
+  #cartBar {
+    position: fixed;
+    bottom: 0;
+    left: 0;
+    width: 100%;
+    background: #111;
+    padding: 16px;
+    display: none;
+    z-index: 999;
+}
+
+.cart-bar-content {
+    display: flex;
+    justify-content: space-between;
+    align-items: center;
+}
+
+.cart-bar-content button {
+    background: #ff3b5c;
+    border: none;
+    padding: 10px 16px;
+    border-radius: 20px;
+    color: white;
+    font-weight: bold;
+}
 
 </style>
 </head>
@@ -1026,7 +1051,8 @@ button {
 </div>
 
 <div id="main"></div>
-  <div id="orderSuccess">✅ Заказ отправлен</div>
+<div id="orderSuccess">✅ Заказ отправлен</div>
+<div id="cartBar"></div>
 
 <script>
 
@@ -1143,45 +1169,32 @@ let currentCategory = null;
 ]
 };
 
-function updateCartBar(){
+function updateCartBar() {
     const cartCountEl = document.getElementById("cartCount");
-    if(!cartCountEl) {
-        console.log("cartCount не найден");
+    const cartBar = document.getElementById("cartBar");
+
+    const totalCount = cart.reduce((sum, item) => sum + item.qty, 0);
+    const totalPrice = cart.reduce((sum, item) => sum + item.price * item.qty, 0);
+
+    // обновляем цифру сверху
+    if (cartCountEl) {
+        cartCountEl.textContent = totalCount;
+    }
+
+    // если корзина пустая — скрываем нижнюю панель
+    if (totalCount === 0) {
+        cartBar.style.display = "none";
         return;
     }
 
-    const totalCount = cart.reduce((sum, item) => sum + item.qty, 0);
-    console.log("totalCount:", totalCount);
-
-    cartCountEl.textContent = totalCount;
-}
-
-function renderCategories() {
-  currentCategory = null;
-  
-  let html = `
-<div class="top-menu">
-    <button class="active" onclick="renderCategories()">🛍 Каталог</button>
-    <button onclick="renderDelivery()">🚚 Доставка</button>
-    <button onclick="renderPayment()">💳 Оплата</button>
-</div>
-
-<h2 class="section-title">Категории</h2>
-<div class='grid'>
-`;
-
-  for (let category in products) {
-    html += `
-      <div class="category-card"
-        style="background-image: url('${categoryImages[category]}')"
-        onclick="openCategory('${category}')">
-        ${category}
-      </div>
+    // показываем нижнюю панель
+    cartBar.style.display = "flex";
+    cartBar.innerHTML = `
+        <div class="cart-bar-content">
+            <span>${totalPrice} ₽</span>
+            <button onclick="renderCart()">Открыть корзину</button>
+        </div>
     `;
-  }
-  
-  html += "</div>";
-  document.getElementById("main").innerHTML = html;
 }
   
 function renderCategoryContent(category){
