--- a/index.html
+++ b/index.html
@@ -1014,6 +1014,41 @@ button {
     background: rgba(255,255,255,0.3);
     margin: 0 auto 10px auto;
 }
+  /* ===== Нижняя панель корзины ===== */
+
+.cart-bar {
+    position: fixed;
+    bottom: 0;
+    left: 0;
+    right: 0;
+    background: #111;
+    padding: 14px 16px;
+    display: none;
+    z-index: 999;
+    box-shadow: 0 -4px 25px rgba(0,0,0,0.5);
+}
+
+.cart-bar-content {
+    display: flex;
+    justify-content: space-between;
+    align-items: center;
+}
+
+#cartTotal {
+    font-size: 18px;
+    font-weight: bold;
+    color: #fff;
+}
+
+.cart-bar button {
+    background: #ff3b5c;
+    color: white;
+    border: none;
+    padding: 10px 18px;
+    border-radius: 14px;
+    font-weight: bold;
+    cursor: pointer;
+}
 
 </style>
 </head>
@@ -1027,6 +1062,14 @@ button {
 
 <div id="main"></div>
 <div id="orderSuccess">✅ Заказ отправлен</div>
+
+<!-- 🔥 ВСТАВИТЬ ВОТ ЗДЕСЬ -->
+<div id="cartBar" class="cart-bar">
+    <div class="cart-bar-content">
+        <span id="cartTotal">0 ₽</span>
+        <button onclick="renderCart()">Перейти в корзину</button>
+    </div>
+</div>
 
 <script>
 
