--- a/index.html
+++ b/index.html
@@ -900,7 +900,7 @@ button {
     position: fixed;
     bottom: 0;
     left: 0;
-    width: 100%;
+    right: 0;
 
     background: rgba(18,18,18,0.96);
     backdrop-filter: blur(18px);
@@ -1048,6 +1048,9 @@ button {
     border-radius: 14px;
     font-weight: bold;
     cursor: pointer;
+}
+  * {
+    box-sizing: border-box;
 }
 
 </style>
