--- a/index.html
+++ b/index.html
@@ -1635,28 +1635,34 @@ text += `🆔 ID: ${user?.id}`;
     <div class="badge">Анонимно</div>
 </div>
 
-        <div class="delivery-card">
-            <h3>📦 СДЭК</h3>
+        <div class="delivery-card" onclick="openDelivery('cdek')">
+    <h3>📦 СДЭК</h3>
             <p>✔ Пункты выдачи</p>
             <p>✔ Курьерская доставка</p>
             <p>✔ Отправка по РФ</p>
         </div>
 
-        <div class="delivery-card">
-            <h3>📮 Почта России</h3>
+       <div class="delivery-card" onclick="openDelivery('post')">
+    <h3>📮 Почта России</h3>
             <p>✔ 1 класс</p>
             <p>✔ Отслеживание</p>
             <p>✔ Отправка по РФ</p>
         </div>
 
-        <div class="delivery-card">
-            <h3>🟡 Яндекс.Доставка</h3>
+        <div class="delivery-card" onclick="openDelivery('yandex_courier')">
+    <h3>🟡 Яндекс.Доставка</h3>
             <p>✔ ПВЗ</p>
             <p>✔ Курьер</p>
             <p>✔ Быстрая отправка</p>
         </div>
-
-    </div>
+        
+        <div class="delivery-card" onclick="openDelivery('fivepost')">
+    <h3>📦 5Post</h3>
+    <p>✔ Пункты выдачи 5Post</p>
+    <p>✔ Постаматы в «Пятёрочке»</p>
+    <p>✔ Код из СМС</p>
+</div>
+</div>
     `;
 
     document.getElementById("main").innerHTML = html;
@@ -1751,12 +1757,193 @@ function openDelivery(type) {
 
             <div class="delivery-bottom">
                 <div>Рекомендуем</div>
-                <div class="brand">Я Доставка</div>
+                <div class="brand">Яндекс Доставка</div>
             </div>
 
         </div>
         `;
     }
+  if (type === 'cdek') {
+    content = `
+    <div class="delivery-full-card">
+
+        <button id="backBtn" onclick="renderDelivery()">← Назад</button>
+
+        <h2>СДЭК</h2>
+
+        <div class="delivery-feature">✔ Пункты выдачи СДЭК</div>
+
+        <div class="rating-row">
+            <div>Анонимность 
+                <span class="stars">★★★★☆</span>
+            </div>
+            <div>Скорость 
+                <span class="stars">★★★★☆</span>
+            </div>
+        </div>
+
+        <div class="delivery-section">
+            <h4>Оформление</h4>
+            <p>- Ф.И.О.</p>
+            <p>- Действующий номер телефона</p>
+            <p>- Эл. почта</p>
+        </div>
+
+        <div class="delivery-section">
+            <h4>Получение</h4>
+            <p>- Постамат — код из СМС</p>
+            <p>- ПВЗ — получение по паспорту</p>
+        </div>
+
+        <div class="delivery-section">
+            <h4>Срок хранения посылки</h4>
+            <p>- В пункте выдачи — 14 дней</p>
+            <p>- Постамат — 7 дней</p>
+        </div>
+
+        <div class="delivery-bottom">
+            <div>Популярно</div>
+            <div class="brand">СДЭК</div>
+        </div>
+
+    </div>
+    `;
+}
+  if (type === 'post') {
+    content = `
+    <div class="delivery-full-card">
+
+        <button id="backBtn" onclick="renderDelivery()">← Назад</button>
+
+        <h2>Почта России (1 класс)</h2>
+
+        <div class="delivery-feature">✔ Отправление 1 класс</div>
+
+        <div class="rating-row">
+            <div>Анонимность 
+                <span class="stars">★★★☆☆</span>
+            </div>
+            <div>Скорость 
+                <span class="stars">★★★☆☆</span>
+            </div>
+        </div>
+
+        <div class="delivery-section">
+            <h4>Оформление</h4>
+            <p>- Индекс почтового отделения</p>
+            <p>- Ф.И.О.</p>
+            <p>- Действующий номер телефона</p>
+        </div>
+
+        <div class="delivery-section">
+            <h4>Получение</h4>
+            <p>- Почтовое отделение — паспорт</p>
+        </div>
+
+        <div class="delivery-section">
+            <h4>Срок хранения посылки</h4>
+            <p>- В отделении — до 30 дней</p>
+        </div>
+
+        <div class="delivery-bottom">
+            <div>Надёжно</div>
+            <div class="brand">Почта РФ</div>
+        </div>
+
+    </div>
+    `;
+}
+  if (type === 'yandex_courier') {
+    content = `
+    <div class="delivery-full-card">
+
+        <button id="backBtn" onclick="renderDelivery()">← Назад</button>
+
+        <h2>Яндекс.Доставка</h2>
+
+        <div class="delivery-feature">✔ ПВЗ и курьер</div>
+
+        <div class="rating-row">
+            <div>Анонимность 
+                <span class="stars">★★★★☆</span>
+            </div>
+            <div>Скорость 
+                <span class="stars">★★★★☆</span>
+            </div>
+        </div>
+
+        <div class="delivery-section">
+            <h4>Оформление</h4>
+            <p>- Действующий номер телефона</p>
+            <p>- Эл. почта, к которой есть доступ</p>
+        </div>
+
+        <div class="delivery-section">
+            <h4>Получение</h4>
+            <p>- ПВЗ — код из СМС</p>
+            <p>- Курьер — паспорт</p>
+        </div>
+
+        <div class="delivery-section">
+            <h4>Срок хранения посылки</h4>
+            <p>- ПВЗ — 7 дней</p>
+        </div>
+
+        <div class="delivery-bottom">
+            <div>Быстро</div>
+            <div class="brand">Яндекс</div>
+        </div>
+
+    </div>
+    `;
+}
+  if (type === 'fivepost') {
+    content = `
+    <div class="delivery-full-card">
+
+        <button id="backBtn" onclick="renderDelivery()">← Назад</button>
+
+        <h2>5Post</h2>
+
+        <div class="delivery-feature">✔ Пункты выдачи 5Post / постаматы в «Пятёрочке»</div>
+
+        <div class="rating-row">
+            <div>Анонимность 
+                <span class="stars">★★★★☆</span>
+            </div>
+            <div>Скорость 
+                <span class="stars">★★★☆☆</span>
+            </div>
+        </div>
+
+        <div class="delivery-section">
+            <h4>Оформление</h4>
+            <p>- Ф.И.О.</p>
+            <p>- Действующий номер телефона</p>
+            <p>- Эл. почта (по необходимости)</p>
+        </div>
+
+        <div class="delivery-section">
+            <h4>Получение</h4>
+            <p>- Постамат — код из СМС</p>
+            <p>- Касса магазина «Пятёрочка» — код из СМС</p>
+            <p>- Паспорт обычно не требуется</p>
+        </div>
+
+        <div class="delivery-section">
+            <h4>Срок хранения посылки</h4>
+            <p>- Постамат — 3–5 дней</p>
+            <p>- Пункт выдачи — до 7 дней</p>
+        </div>
+
+        <div class="delivery-bottom">
+            <div>Рекомендуем</div>
+            <div class="brand">5Post</div>
+        </div>
+
+    </div>
+    `;
+}
 
     document.getElementById("main").innerHTML = content;
 }
