--- a/index.html
+++ b/index.html
@@ -2010,7 +2010,7 @@ function openDelivery(type) {
         <p>4. Указать населенный пункт, выбрать способ доставки и оплаты, указать данные (можно указывать не настоящие данные, на ПВЗ, постаматах и курьерской доставке данные не проверяются), необходимые для отправки, и нажать кнопку “оформить заказ”</p>
 
         <div class="contact-block">
-            <h3>По всем вопросам</h3>
+            <h3>По всем вопросам:</h3>
             <a href="https://t.me/budapuff_meneger" target="_blank" class="contact-btn">
                 Связаться с оператором @budapuff_meneger
             </a>
