--- a/index.html
+++ b/index.html
@@ -1667,6 +1667,7 @@ text += `🆔 ID: ${user?.id}`;
     <button onclick="renderCategories()">🛍 Каталог</button>
     <button class="active" onclick="renderDelivery()">🚚 Доставка</button>
     <button onclick="renderPayment()">💳 Оплата</button>
+    <button onclick="renderHowToOrder()">❓ Как оформить</button>
 </div>
 
     <h2>🚚 Варианты доставки</h2>
@@ -1720,6 +1721,7 @@ function renderPayment() {
     <button onclick="renderCategories()">🛍 Каталог</button>
     <button onclick="renderDelivery()">🚚 Доставка</button>
     <button class="active" onclick="renderPayment()">💳 Оплата</button>
+    <button onclick="renderHowToOrder()">❓ Как оформить</button>
 </div>
 
     <h2>💳 Варианты оплаты</h2>
